--- a/Makefile.am
+++ b/Makefile.am
@@ -1,5 +1,6 @@
 # vbucketmigrator
 #
+#     Copyright 2013 Zynga, Inc.
 #     Copyright 2010 NorthScale, Inc.
 #
 #   Licensed under the Apache License, Version 2.0 (the "License");
